# achievaim

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  READMEUpdate.md  docker-compose-testing.yml  docker-compose.yml  justfile  package-lock.json  package.json  rollup.config.js  tailwind.config.js
.github/: dependabot.yml  release_draft_template.yml
.github/workflows/: release_drafter.yml  testing.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: config.py  db.py  exceptions.py  main.py  utils.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/routes/: goal.py  health.py  login.py  user.py
backend/app/core/: config.py  security.py  utils.py
backend/app/models/: goals.py  object_id.py  openai.py  smart_goal.py  token.py  user.py
backend/app/services/: goal_service.py  openai.py  user_service.py
backend/app/templates/: index.html
backend/tests/: conftest.py  test_goal_routes.py  test_goal_service.py  test_health_routes.py  test_login_routes.py  test_main.py  test_object_id.py  test_security.py  test_user_model.py  test_user_routes.py  test_user_service.py  test_utils.py
client/public/: index.html
client/src/: App.svelte
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  vite.config.ts
frontend/src/: app.html
frontend/tests/: account.spec.ts  account_settings.spec.ts  create_goals.spec.ts  create_index.spec.ts  edit_goal.spec.ts  end_to_end.spec.ts  error.spec.ts  (+6 more)
server/: app.js
(+58 files in other folders)
