[tool.poetry]
name = "SMARTGoalPT"
version = "0.1.0"
description = "API for SMARTGoalPT"
authors = ["Bejamin Kennedy <benjaminjoelkennedy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
argon2-cffi = "23.1.0"
beanie = "1.23.1"
fastapi = {version = "0.104.1", extras = ["all"]}
gunicorn = "21.2.0"
httpx = "0.25.1"
passlib = "1.7.4"
pydantic = "2.4.2"
pydantic-settings = "2.0.3"
pyjwt = "2.8.0"
uvicorn = {version = "0.24.0.post1", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
black = "23.10.1"
mypy = "1.6.1"
pytest = "7.4.3"
pytest-asyncio = "0.21.1"
pytest-cov = "4.1.0"
ruff = "0.1.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["motor.*", "passlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report term-missing"
asyncio_mode = "auto"

[tool.ruff]
select = ["E", "F", "UP", "I001", "T201", "T203"]
ignore = ["E501"]
line-length = 100
target-version = "py311"
fix = true
